hphp/test/zend/good/ext/posix/tests/posix_getrlimit.php.skipif
<?php
if (!extension_loaded('posix')) die('skip - POSIX extension not loaded'); 
if (!function_exists('posix_getrlimit')) die('skip posix_getrlimit() not found');
?>