hphp/test/zend/bad/ext/standard/tests/file/file_get_contents_error002.php.skipif
<?php
	if (!function_exists("file_get_contents"))
		die ("skip file_get_contents function is not found");
?>